# qs-hub

./: .gitignore  README.md  example.py  main.py  pyproject.toml
configs/: core.yaml
configs/ingestion/: local_files.yaml
configs/pipelines/: bronze-to-silver.yaml  silver-to-gold.yaml
data/source/: example.csv
pipelines/: registry.py
pipelines/bronze_to_silver/: example.py
pipelines/silver_to_gold/: example.py  example_to_gold.py
src/qshub/: main.py
src/qshub/collectors/: local_file.py
src/qshub/core/: bronze_to_silver_pipeline.py  pipeline.py  silver_to_gold_pipeline.py  storage_manager.py
src/qshub/ingestion/: ingestion_manager.py  local_files.py
src/qshub/ingestion/functions/: local_files.py  registry.py
src/qshub/transforms/: functions.py  transform.py
src/qshub/utils/: utils.py
