[project]
name = "qs-hub"
version = "0.1.0"
description = ""
authors = [{name = "Warren Davies"}]
homepage = "https://github.com/WarrenDavies/qs-hub/"
repository = "https://github.com/WarrenDavies/qs-hub/"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "jenerationutils @ file:///home/w/repos/jeneration-utils"
]
packages = [{include = "qshub", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
jenerationutils = {develop = true}
